force-app/main/default/objects/MuleSoft_Orders_Automation__e/MuleSoft_Orders_Automation__e.object-meta.xml
<CustomObject>
    <description>This platform event is created to retrieve essential details as part of IM Connect and Email Orders Automation which is triggering on newly creation of case record.</description>
    <label>MuleSoft Orders Automation</label>
    <pluralLabel>MuleSoft Orders Automation</pluralLabel>
</CustomObject>