force-app/main/default/objects/MuleSoft_Orders_Automation__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Case Number for easily determining the case.</description>
    <label>Case Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>