force-app/main/default/objects/MuleSoft_Orders_Automation__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the case. Useful for retrieving customer information for IM Connect Orders.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>