force-app/main/default/objects/MuleSoft_Orders_Automation__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject represents email subject if routed via Email Order or via IM Connect.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>