force-app/main/default/objects/MuleSoft_Orders_Automation__e/fields/Supplied_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Email__c</fullName>
    <description>This is the case supplied email.</description>
    <label>Supplied Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>